# math

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: build.yml  cmake.yml
example/: CMakeLists.txt
example/c++/: main.cpp
glug_math/: CMakeLists.txt  common_src.cmake
glug_math/cmake/: config.cmake.in
glug_math/common_headers/: README.md
glug_math/common_headers/include/glug/: allocator_t.h  bool.h  extern.h  import.h  namespace.h  os.h  params.h  std_allocator.inl
glug_math/include/glug/: math.h
glug_math/include/glug/math/: box.h  box_t.h  circle.h  circle_t.h  float.h  line.h  line2.h  line2_t.h  line3.h  line3_t.h  line_t.h  mat2.h  mat2_t.h  plane.h  plane_t.h  rect.h  rect_t.h  sphere.h  sphere_t.h  triangle.h  triangle2.h  triangle2_t.h  triangle3.h  triangle3_t.h  triangle_t.h  vec2.h  vec2_t.h  vec3.h  vec3_t.h  vec4.h  vec4_t.h  version.h.in
glug_math/src/: box.c  circle.c  float.c  line.c  line2.c  line3.c  mat2.c  plane.c  rect.c  sphere.c  triangle.c  triangle2.c  triangle3.c  vec2.c  vec3.c  vec4.c
glug_math/tests/: CMakeLists.txt
glug_math/tests/asserts/: asserts.c  asserts.h
glug_math/tests/confs/: box.cmake  circle.cmake  line.cmake  line2.cmake  line3.cmake  mat2.cmake  plane.cmake  sphere.cmake  tri3.cmake  triangle.cmake  vec2.cmake  vec3.cmake  vec4.cmake
glug_math/tests/suites/: add_test.h  box.c  circle.c  create_suite.h  float.c  line.c  line2.c  line3.c  mat2.c  plane.c  rect.c  sphere.c  tri2.c  tri3.c  triangle.c  vec2.c  vec3.c  vec4.c
test/: CMakeLists.txt  main.c  tests.cmake
test/confs/: box.cmake  circle.cmake  float.cmake  line2.cmake  line3.cmake  mat2.cmake  plane.cmake  rect.cmake  sphere.cmake  tri2.cmake  tri3.cmake  vec2.cmake  vec3.cmake  vec4.cmake
test/suites/: add_test.h  asserts.c  asserts.h  box.c  circle.c  float.c  line2.c  line3.c  mat2.c  plane.c  rect.c  sphere.c  tri2.c  tri3.c  vec2.c  vec3.c  vec4.c
test/utils/asserts/: asserts.c
